:sparkles: Updated: Chains Page.

--- a/data/chains/opstack.mdx
+++ b/data/chains/opstack.mdx
@@ -3,7 +3,7 @@ title: Conduit Testnet
 logo: https://i.imgur.com/aLxlkqL.png
 currency: ETH
 ChainID: 111
-poolManagerAddress: '0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9'
+poolManager: '0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9'
 tags: official, docs
 docs: 'https://docs.uniswapfoundation.org/overview/conduit-testnet'
 ---
