--- a/data/chains/base-goerli.mdx
+++ b/data/chains/base-goerli.mdx
@@ -3,5 +3,5 @@ title: Base Goerli Testnet
 logo: https://icons.llamao.fi/icons/chains/rsz_base.jpg
 currency: ETH
 ChainID: 84531
-poolManagerAddress: '0x693B1C9fBb10bA64F0d97AE042Ee32aE9Eb5610D'
+poolManager: '0x693B1C9fBb10bA64F0d97AE042Ee32aE9Eb5610D'
 ---
