--- a/data/chains/goerli-eth.mdx
+++ b/data/chains/goerli-eth.mdx
@@ -3,5 +3,5 @@ title: Ethereum Goerli Testnet
 logo: https://chainlist.org/unknown-logo.png
 currency: ETH
 ChainID: 5
-poolManagerAddress: '0x862Fa52D0c8Bca8fBCB5213C9FEbC49c87A52912'
+poolManager: '0x862Fa52D0c8Bca8fBCB5213C9FEbC49c87A52912'
 ---
