--- a/data/chains/sepolia.mdx
+++ b/data/chains/sepolia.mdx
@@ -3,5 +3,5 @@ title: Ethereum Sepolia Testnet
 logo: https://chainlist.org/unknown-logo.png
 currency: ETH
 ChainID: 11155111
-poolManagerAddress: '0x64255ed21366DB43d89736EE48928b890A84E2Cb'
+poolManager: '0x64255ed21366DB43d89736EE48928b890A84E2Cb'
 ---
