:sparkles: Added: Authentification | OTP & Github.

--- a/data/chains/sepolia.mdx
+++ b/data/chains/sepolia.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ethereum Sepolia Testnet
-logo: https://chainlist.org/unknown-logo.png
+logo: https://icons.llamao.fi/icons/chains/rsz_ethereum.jpg
 currency: ETH
 ChainID: 11155111
 poolManager: '0x64255ed21366DB43d89736EE48928b890A84E2Cb'
