--- a/data/chains/goerli-eth.mdx
+++ b/data/chains/goerli-eth.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ethereum Goerli Testnet
-logo: https://chainlist.org/unknown-logo.png
+logo: https://icons.llamao.fi/icons/chains/rsz_ethereum.jpg
 currency: ETH
 ChainID: 5
 poolManager: '0x862Fa52D0c8Bca8fBCB5213C9FEbC49c87A52912'
