--- a/data/chains/mumbai.mdx
+++ b/data/chains/mumbai.mdx
@@ -1,7 +1,7 @@
 ---
 title: Polygon Mumbai Testnet
-logo: https://www.coinbase.com/faucets/images/icon-polygon.svg
+logo: https://icons.llamao.fi/icons/chains/rsz_polygon.jpg
 currency: MATIC
 ChainID: 80001
-poolManager: '0x5ff8780e4d20e75b8599a9c4528d8ac9682e5c89'
+poolManager: "0x5ff8780e4d20e75b8599a9c4528d8ac9682e5c89"
 ---
