--- a/data/chains/poly-mumbai.mdx
+++ b/data/chains/poly-mumbai.mdx
@@ -1,8 +1,9 @@
 ---
 title: Polygon Mumbai
-logo: https://chainlist.org/unknown-logo.png
+logo: https://icons.llamao.fi/icons/chains/rsz_polygon.jpg
 currency: N/A
 ChainID: 0
+tags: new
 poolManager: "0xF484115633A83668a430284ad4327877aDD9e4aC"
 poolInitializeTest: "0x444d379EA4863bB403853428aedA3C532e3E5479"
 poolModifyLiquitifyTest: "0xFf677612d2EDDC4A48F47000C0D9A72735EfB12D"
