:lipstick: Updated: Chain Card.

--- a/data/chains/eth-sepolia.mdx
+++ b/data/chains/eth-sepolia.mdx
@@ -1,8 +1,8 @@
 ---
 title: Ethereum Sepolia
 logo: https://icons.llamao.fi/icons/chains/rsz_ethereum.jpg
-currency: N/A
-ChainID: 0
+currency: ETH
+ChainID: 11155111
 tags: new
 poolManager: "0x9F65ED63c8d4CEb3dF78929b0AB9cbfce8965fFa"
 poolInitializeTest: "0xD4885d17CD8A2D2B9dB0B529555EeEC3D3528454"
