--- a/data/chains/op-goerli.mdx
+++ b/data/chains/op-goerli.mdx
@@ -1,8 +1,8 @@
 ---
 title: Optimism Goerli
 logo: https://assets.coingecko.com/coins/images/25244/large/Optimism.png?1696524385
-currency: N/A
-ChainID: 0
+currency: ETH
+ChainID: 420
 tags: new
 poolManager: "0x700d8eDB0ACD7Aa77619CAAEB210B4611991BA7a"
 poolInitializeTest: "0x2FcF1ef8bd170781C2c78469139a2AcBAFDECf33"
