--- a/data/chains/op-sepolia.mdx
+++ b/data/chains/op-sepolia.mdx
@@ -1,8 +1,8 @@
 ---
 title: Optimism Sepolia
 logo: https://assets.coingecko.com/coins/images/25244/large/Optimism.png?1696524385
-currency: N/A
-ChainID: 0
+currency: ETH
+ChainID: 11155420
 tags: new
 poolManager: "0xA5b101a15948aCa5F7278874a4E30c1c09b0C9ae"
 poolInitializeTest: "0xF484115633A83668a430284ad4327877aDD9e4aC"
