--- a/data/chains/poly-amoy.mdx
+++ b/data/chains/poly-amoy.mdx
@@ -1,8 +1,8 @@
 ---
 title: Polygon Amoy
 logo: https://icons.llamao.fi/icons/chains/rsz_polygon.jpg
-currency: N/A
-ChainID: 0
+currency: MATIC
+ChainID: 80002
 tags: new
 poolManager: "0xA5b101a15948aCa5F7278874a4E30c1c09b0C9ae"
 poolInitializeTest: "0xF484115633A83668a430284ad4327877aDD9e4aC"
