--- a/data/chains/poly-mumbai.mdx
+++ b/data/chains/poly-mumbai.mdx
@@ -1,8 +1,8 @@
 ---
 title: Polygon Mumbai
 logo: https://icons.llamao.fi/icons/chains/rsz_polygon.jpg
-currency: N/A
-ChainID: 0
+currency: MATIC
+ChainID: 80001
 tags: new
 poolManager: "0xF484115633A83668a430284ad4327877aDD9e4aC"
 poolInitializeTest: "0x444d379EA4863bB403853428aedA3C532e3E5479"
