--- a/data/chains/base-sepolia.mdx
+++ b/data/chains/base-sepolia.mdx
@@ -4,8 +4,8 @@ logo: https://icons.llamao.fi/icons/chains/rsz_base.jpg
 currency: ETH
 ChainID: 84532 
 tags: new
-poolManager: "0x0363f76163bf6c2d28C33F69a585C35d3F02Fc81"
-poolInitializeTest: "0xBC8d61a1abC47e5Da614ED8039D7d0Ce736A60e2"
-poolModifyLiquitifyTest: "0xdD16940611A8116D9D9Bd1E6640dE799814126b0"
-poolSwapTest: "0x700d8eDB0ACD7Aa77619CAAEB210B4611991BA7a"
+poolManager: "0xFC885F37F5A9FA8159c8dBb907fc1b0C2fB31323"
+poolModifyLiquidityTest: "0x78e7F1502A9e4115dEbd6876E0AC4FaEBDB96880"
+poolSwapTest: "0x1411060f44DA12017ADbB34De5f9238912dB2055"
+quoter: "0x5cbA23E581A5cBee77BE4E98Df0bCea74C0B5C9a"
 ---
