--- a/data/chains/eth-sepolia.mdx
+++ b/data/chains/eth-sepolia.mdx
@@ -4,8 +4,8 @@ logo: https://icons.llamao.fi/icons/chains/rsz_ethereum.jpg
 currency: ETH
 ChainID: 11155111
 tags: new
-poolManager: "0xf7a031A182aFB3061881156df520FE7912A51617"
-poolInitializeTest: "0xB008FfC077Bc23c785A9872AEb7E33c0881CD9a9"
-poolModifyLiquitifyTest: "0x140C64C63c52cE05138E21564b72b0B2Dff9B67f"
-poolSwapTest: "0x53FAD770869B391A4f7E15C397f73e06Cd061680"
+poolManager: "0xFf34e285F8ED393E366046153e3C16484A4dD674"
+poolModifyLiquidityTest: "0xFB3e0C6F74eB1a21CC1Da29aeC80D2Dfe6C9a317"
+poolSwapTest: "0x9A8ca723F5dcCb7926D00B71deC55c2fEa1F50f7"
+quoter: "0xf3A39C86dbd13C45365E57FB90fe413371F65AF8"
 ---
