--- a/data/chains/op-sepolia.mdx
+++ b/data/chains/op-sepolia.mdx
@@ -4,8 +4,8 @@ logo: https://assets.coingecko.com/coins/images/25244/large/Optimism.png?1696524
 currency: ETH
 ChainID: 11155420
 tags: new
-poolManager: "0x8Ff6dbbEF8A00b6c4D3352f38fFa4b05f9274A8f"
-poolInitializeTest: "0x0363f76163bf6c2d28C33F69a585C35d3F02Fc81"
-poolModifyLiquitifyTest: "0xBC8d61a1abC47e5Da614ED8039D7d0Ce736A60e2"
-poolSwapTest: "0xdD16940611A8116D9D9Bd1E6640dE799814126b0"
+poolManager: "0x7B2B5A2c377B34079589DDbCeA20427cdb7C8219"
+poolModifyLiquidityTest: "0x24C731645ee1e35C3219153d370EBd79784D1E91"
+poolSwapTest: "0xeb4708989b42f0cd327A6Bd8f76a931429137fd7"
+quoter: "0x1B4F103Ff3FdaE81E75Ec278256E5B4f4728b2B2"
 ---
