--- a/data/chains/poly-amoy.mdx
+++ b/data/chains/poly-amoy.mdx
@@ -4,8 +4,8 @@ logo: https://icons.llamao.fi/icons/chains/rsz_polygon.jpg
 currency: MATIC
 ChainID: 80002
 tags: new
-poolManager: "0x0363f76163bf6c2d28C33F69a585C35d3F02Fc81"
-poolInitializeTest: "0xBC8d61a1abC47e5Da614ED8039D7d0Ce736A60e2"
-poolModifyLiquitifyTest: "0xdD16940611A8116D9D9Bd1E6640dE799814126b0"
-poolSwapTest: "0x700d8eDB0ACD7Aa77619CAAEB210B4611991BA7a"
+poolManager: "0xb673AE03413860776497B8C9b3E3F8d4D8745cB3"
+poolModifyLiquidityTest: "0x862Fa52D0c8Bca8fBCB5213C9FEbC49c87A52912"
+poolSwapTest: "0x30654C69B212AD057E817EcA26da6c5edA32E2E7"
+quoter: "0x30654C69B212AD057E817EcA26da6c5edA32E2E7"
 ---
