fix(blog): resolved static fetching

--- a/data/blogs/getting-started-with-v4-template.mdx
+++ b/data/blogs/getting-started-with-v4-template.mdx
@@ -19,9 +19,9 @@ tag: blog
     width="60%"
     style={{ marginBottom: "0" }}
   />
-  <p style={{ fontSize: "1rem", marginTop: "0" }}>
+  <div style={{ fontSize: "1rem", marginTop: "0" }}>
     From the coding zone, Saucepoint's digital dojo.
-  </p>
+  </div>
 </div>
 
 ## Introduction
