--- a/data/blogs/infographic-limit-hook.mdx
+++ b/data/blogs/infographic-limit-hook.mdx
@@ -20,9 +20,9 @@ tag: blog
     width="60%"
     style={{ marginBottom: "0" }}
   />
-  <p style={{ fontSize: "1rem", marginTop: "0" }}>
+  <div style={{ fontSize: "1rem", marginTop: "0" }}>
     Limit Order Hook Infographic
-  </p>
+  </div>
 </a>
 
 ## Introduction
